# fastapiserver

./: client.py  pyproject.toml  test.csv
app/: main.py
