[tool.poetry]
name = "fastapiserver"
version = "0.1.0"
description = ""
authors = ["rtake <rtake1110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
